--- a/playbook.yaml
+++ b/playbook.yaml
@@ -122,6 +122,10 @@
     apt:
       name: python-is-python3
       update_cache: yes
+  - name: Install pip for python3 with Apt
+    apt:
+      name: python3-pip
+      update_cache: yes
   - name: Install python packages with pip
     pip:
       name:
@@ -129,9 +133,6 @@
         - notebook
         - voila
         - pint
-
-  roles:
-    - role: geerlingguy.pip
 
 - 
   # install sudo for the vs-code role below 
