add dendron to list of VS Code extensions

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -171,6 +171,7 @@
         - username: "dev"
           visual_studio_code_extensions:
             - ms-python.python
+            - dendron.dendron
           visual_studio_code_settings_overwrite: yes
           visual_studio_code_settings: {
             "extensions.ignoreRecommendations": true,
