--- a/playbook.yaml
+++ b/playbook.yaml
@@ -172,6 +172,7 @@
           visual_studio_code_extensions:
             - ms-python.python
             - dendron.dendron
+            - foam.foam-vscode
           visual_studio_code_settings_overwrite: yes
           visual_studio_code_settings: {
             "extensions.ignoreRecommendations": true,
