--- a/playbook.yaml
+++ b/playbook.yaml
@@ -23,6 +23,9 @@
   - name: Verify install_files is present
     debug: msg="install_files/_README = {{ lookup('file', '/home/kasm-default-profile/install_files/_README') }}"  
     # Detect if we are running on a WSL2 environment
+  - name: Verify install_files is present
+    debug: msg="install_files/_README = {{ lookup('file', '/home/kasm-default-profile/install_files/_README') }}"
+    # Detect if we are running on a WSL2 environment
   - name: Set wsl2_environment fact default to false
     set_fact:
       wsl2_environment: false
