install asciidoctor (as rubygem)

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -171,6 +171,45 @@
         - voila
         - pint
 
+-
+  # install ASCII Doctor
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tags:
+  - install_generator_asciidoctor
+  - install_doctools
+
+  vars:
+    asciidoctor_version: 2.0.17
+    asciidoctor_version_expected: "{{ asciidoctor_version }}[.]"
+
+  tasks:
+  - name: Install Ruby
+    apt:
+      name: ruby-full
+      update_cache: yes
+  - name: Run gem install for asciidoctor
+    shell:
+      cmd: "gem install asciidoctor -v {{ asciidoctor_version }}"
+  - name: Install hexapdf dependencies
+    apt:
+      name: libssl-dev
+      update_cache: yes
+  - name: Install PlantUML and PDF support
+    shell:
+      cmd: gem install asciidoctor-diagram rghost hexapdf text-hyphen rouge pygments.rb coderay asciidoctor-pdf
+  - name: Get asciidoctor version
+    shell: asciidoctor --version | grep Asciidoctor | sed 's/[[:alpha:]|(|[:space:]]//g' | sed 's/[*~://]//g'
+    register: installed_asciidoctor_version
+  - name: Display asciidoctor version
+    debug:
+      msg: "ASCII Doctor = {{ installed_asciidoctor_version.stdout }}"
+  - name: Test asciidoctor version
+    fail:
+      msg: "ASCII Doctor Version Error: Expected {{ asciidoctor_version_expected }} | Found {{ installed_asciidoctor_version.stdout }}"
+    when: installed_asciidoctor_version.stdout != asciidoctor_version_expected
+
 - 
   # install sudo for the vs-code role below 
   hosts: localhost
