--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,18 @@ on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
     branches: [ main ]
+    paths-ignore:
+      - 'devResources/**'
+      - '.gitignore'
+      - 'LICENSE.md'
+      - 'README.md'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - 'devResources/**'
+      - '.gitignore'
+      - 'LICENSE.md'
+      - 'README.md'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
