--- a/playbook.yaml
+++ b/playbook.yaml
@@ -82,6 +82,336 @@
       update_cache: yes
 
 -
+  # Install zlib
+  hosts: localhost
+  connection: local
+  tags:
+  - install_doctools
+  - install_plantuml
+
+  tasks:
+  - name: Extract zlib v1.2.13 source from tarball
+    unarchive:
+      src: /home/kasm-default-profile/install_files/zlib-1.2.13.tar.gz
+      dest: /home/kasm-default-profile/install_files
+      remote_src: yes
+      creates: /home/kasm-default-profile/install_files/zlib-1.2.13/README
+  - name: Build zlib v1.2.13
+    shell:
+      cmd: ./configure && make > /tmp/zlib_build_output.txt 2>&1 && make install
+      chdir: /home/kasm-default-profile/install_files/zlib-1.2.13/
+      executable: /bin/bash
+
+-
+  # Install OpenSSL
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tags:
+    - install_avr_build_tools
+    - install_doctools
+    - install_utilities
+
+  tasks:
+  - name: Install libssl-dev
+    apt:
+      name: libssl-dev
+      update_cache: yes
+
+-
+  # Install doctools
+  hosts: localhost
+  connection: local
+  tags: install_doctools
+
+  vars:
+    pandoc_version: "2.18"
+    texlive_version: "2021.20220204-1"
+    texlive_version_expected: "pdfTeX 3.14159265-2.6-1.40.20 (TeX Live 2019/Debian)"
+    asciidoctor_version: 2.0.17
+    asciidoctor_version_expected: "{{ asciidoctor_version }}[.]"
+
+  tasks:
+  - name: Install Ruby
+    apt:
+      name: ruby-full
+      update_cache: yes
+  - name: Join parts of jabref tarball
+    shell: cat /home/kasm-default-profile/install_files/jabref_5.6-1_amd64.deb.part* > /home/kasm-default-profile/install_files/jabref_5.6-1_amd64.deb
+  - name: install jabref from deb
+    apt:
+      deb: /home/kasm-default-profile/install_files/jabref_5.6-1_amd64.deb
+      update_cache: yes
+  - name: Run gem install for asciidoctor
+    shell:
+      cmd: "gem install asciidoctor -v {{ asciidoctor_version }}"
+  - name: install asciidoctor-bibtex as ruby gem
+    shell: gem install asciidoctor-bibtex
+  - name: install asciidoctor-diagram as ruby gem
+    shell: gem install asciidoctor-diagram
+  - name: install asciidoctor-pdf as ruby gem
+    shell: gem install asciidoctor-pdf
+  - name: install asciidoctor-revealjs as ruby gem
+    shell: gem install asciidoctor-revealjs
+  - name: install TeX Live
+    apt:
+      name: "texlive-full={{ texlive_version }}"
+      update_cache: yes
+    # https://mikefarah.gitbook.io/yq/
+  - name: Install yq
+    copy:
+      src: /home/kasm-default-profile/install_files/yq
+      dest: /usr/bin/yq
+      remote_src: yes
+      owner: root
+      group: root
+      mode: '0755'
+  - name: Install pandoc-citeproc
+    apt:
+      name: pandoc-citeproc
+      update_cache: yes
+  - name: Get pandoc version
+    shell: pandoc --version | grep -m 1 -i pandoc | sed 's/[[:alpha:]|(|[:space:]]//g'
+    register: installed_pandoc_version
+  - name: Get TeX Live version
+    shell: latex --version | grep -i Tex -m 1
+    register: installed_texlive_version
+  - name: Display pandoc and texlive versions
+    debug:
+      msg: "pandoc = {{ installed_pandoc_version.stdout }} | texlive = {{ installed_texlive_version.stdout }}"
+  - name: Test pandoc version
+    fail:
+      msg: "Pandoc Version Error: Expected {{ pandoc_version }} | Found {{ installed_pandoc_version.stdout }}"
+    when: installed_pandoc_version.stdout != pandoc_version
+  - name: Test texlive version
+    fail:
+      msg: "TeX Live Version Error: Expected {{ texlive_version_expected }} | Found {{ installed_texlive_version.stdout }}"
+    when: installed_texlive_version.stdout != texlive_version_expected
+  - name: Get asciidoctor version
+    shell: asciidoctor --version | grep Asciidoctor | sed 's/[[:alpha:]|(|[:space:]]//g' | sed 's/[*~://]//g'
+    register: installed_asciidoctor_version
+  - name: Display asciidoctor version
+    debug:
+      msg: "ASCII Doctor = {{ installed_asciidoctor_version.stdout }}"
+  - name: Test asciidoctor version
+    fail:
+      msg: "ASCII Doctor Version Error: Expected {{ asciidoctor_version_expected }} | Found {{ installed_asciidoctor_version.stdout }}"
+    when: installed_asciidoctor_version.stdout != asciidoctor_version_expected
+
+  roles:
+  - role: andrewrothstein.pandoc
+    pandoc_ver: "{{ pandoc_version }}"
+
+-
+  # install PlantUML
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tags:
+  - install_plantuml
+  - install_doctools
+
+  vars:
+    jdk_version: 2:1.11-72
+    graphviz_version_expected: "dot - graphviz version 2.50.0 (20211204.2007)"
+
+  tasks:
+  - name: Install JDK
+    apt:
+      name: "default-jdk={{ jdk_version }}"
+      update_cache: yes
+  - name: Get JDK Version
+    shell: java --version | grep -m 1 -i openjdk
+    register: installed_jdk_version
+  - name: Install pre-reqs to build graphviz
+    apt:
+      name: libcairo2-dev, libexpat-dev, libfreetype-dev, libgd-dev, fontconfig-config, libglib2.0-dev, libgtk2.0-dev, libpng-dev, libsdl-pango-dev, libgts-bin, libgtk-3-dev, libgtkglext1-dev, glade, freeglut3-dev, autoconf, automake, bison, flex, ghostscript, libtool, pkg-config, swig
+      update_cache: yes
+  - name: Expand source files archive
+    unarchive:
+      src: /home/kasm-default-profile/install_files/graphviz-2.50.0.tar.gz
+      dest: /home/kasm-default-profile/install_files/
+      remote_src: yes
+      creates: /home/kasm-default-profile/install_files/graphviz-2.50.0/README
+  - name: Build graphviz
+    shell:
+      cmd: ./configure --enable-perl=no && make > /tmp/graphviz_build_output.txt 2>&1 && make install
+      chdir: /home/kasm-default-profile/install_files/graphviz-2.50.0/
+      executable: /bin/bash
+  - name: Get graphviz version
+    shell: dot -V
+    register: installed_graphviz_version
+  - name: install plantuml
+    copy:
+      src: /home/kasm-default-profile/install_files/plantuml.jar
+      dest: /usr/local/bin/plantuml.jar
+      remote_src: yes
+  - name: Display JDK and GraphViz versions
+    debug:
+      msg: "JDK = {{ installed_jdk_version.stdout }} | graphviz = {{ installed_graphviz_version.stderr }}"
+  - name: Test Graphviz version
+    fail:
+      msg: "Graphviz Version Error: Expected {{ graphviz_version_expected }} | Found {{ installed_graphviz_version.stderr }}"
+    when: installed_graphviz_version.stderr != graphviz_version_expected
+
+-
+  # install PrusaSlicer
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Join parts of PrusaSlicer tarball
+    shell: cat /home/kasm-default-profile/install_files/PrusaSlicer-2.5.2+linux-x64-GTK3-202303231201.tar.bz2.parta* > /home/kasm-default-profile/install_files/PrusaSlicer-2.5.2+linux-x64-GTK3-202303231201.tar.bz2
+  - name: Extract PrusaSlicer for 64-bit Linux to /opt
+    unarchive:
+      src: /home/kasm-default-profile/install_files/PrusaSlicer-2.5.2+linux-x64-GTK3-202303231201.tar.bz2
+      dest: /opt
+      remote_src: yes
+  - name: Create local application folder for PrusaSlicer
+    shell: mkdir -p /home/kasm-default-profile/.local/share/applications/
+  - name: Configure PrusaSlicer desktop shortcut
+    shell: echo "[Desktop Entry]\nName=PrusaSlicer\nGenericName=PrusaSlicer\nExec=/opt/PrusaSlicer-2.5.2+linux-x64-GTK3-202303231201/bin/prusa-slicer\nIcon=/opt/PrusaSlicer-2.5.2+linux-x64-GTK3-202303231201/resources/icons/PrusaSlicer.png\nTerminal=false\nType=Application\nStartupNotify=false\nCategories=Application;Development;" > /home/kasm-default-profile/.local/share/applications/prusaslicer.desktop
+
+
+-
+  # install NodeJs
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tags:
+  - install_doctools
+
+  vars:
+    node_version: "16.14.0"
+    v_node_version: "v{{ node_version }}"
+    npm_version: "8.3.1"
+    npx_version: "8.3.1"
+    yarn_version: "1.22.11"
+    yo_version: "4.3.0"
+    generator_code_version: "1.6.7"
+
+
+  tasks:   # Test Node JS Tools versions
+  - name: Get node version
+    shell: node --version
+    register: installed_node_version
+  - name: Get npm version
+    shell: npm --version
+    register: installed_npm_version
+  - name: Get npx installed version
+    shell: npx --version
+    register: installed_npx_version
+  - name: Get yarn version
+    shell: yarn --version
+    register: installed_yarn_version
+  - name: Display node tool versions
+    debug:
+      msg: "Node = {{ installed_node_version.stdout }} | npm = {{ installed_npm_version.stdout }} | npx = {{ installed_npx_version.stdout }} | yarn = {{ installed_yarn_version.stdout }}"
+  - name: Test node version
+    fail:
+      msg: "NodeJS Version Error: Expected {{ v_node_version }} | Found {{ installed_node_version.stdout }}"
+    when: installed_node_version.stdout != v_node_version
+  - name: Test npm version
+    fail:
+      msg: "NPM Version Error: Expected {{ npm_version }} | Found {{ installed_npm_version.stdout }}"
+    when: installed_npm_version.stdout != npm_version
+  - name: Test npx version
+    fail:
+      msg: "NPX Version Error: Expected {{ npx_version }} | Found {{ installed_npx_version.stdout }}"
+    when: installed_npx_version.stdout != npx_version
+  - name: Test yarn version
+    fail:
+      msg: "Yarn Version Error: Expected {{ yarn_version }} | Found {{ installed_yarn_version.stdout }}"
+    when: installed_yarn_version.stdout != yarn_version
+
+  roles:
+  - role: grzegorznowak.nvm_node
+    nvm_install_script_version: "0.39.1"
+    nvm_node_version: "{{ node_version }}"
+    nvm_install_globally:
+    - name: yarn
+      version: "{{ yarn_version }}"
+    - name: yo
+      version: "{{ yo_version }}"
+    - name: generator-code
+      version: "{{ generator_code_version }}"
+
+-
+  # install Hugo v0.101.0 (extended)
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Download Hugo v0.101.0 (extended) tarball
+    shell: wget https://github.com/gohugoio/hugo/releases/download/v0.101.0/hugo_extended_0.101.0_Linux-64bit.tar.gz -O /home/kasm-default-profile/hugo_extended_0.101.0_Linux-64bit.tar.gz
+  - name: Create temp directory for extracting Hugo tarball
+    shell: mkdir -p /home/kasm-default-profile/hugo_extended_0.101.0_Linux-64bit
+  - name: Extract Hugo tarball
+    unarchive:
+      src: /home/kasm-default-profile/hugo_extended_0.101.0_Linux-64bit.tar.gz
+      dest: /home/kasm-default-profile/hugo_extended_0.101.0_Linux-64bit
+      remote_src: yes
+  - name: Delete Hugo tarball
+    shell: rm /home/kasm-default-profile/hugo_extended_0.101.0_Linux-64bit.tar.gz
+  - name: Install Hugo binary in /usr/local/bin
+    shell: mv /home/kasm-default-profile/hugo_extended_0.101.0_Linux-64bit/hugo /usr/local/bin
+  - name: Delete Hugo temp directory
+    shell: rm -rf /home/kasm-default-profile/hugo_extended_0.101.0_Linux-64bit
+
+-
+  # add default user to dialout group
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Add default user to dialout group
+    user:
+      name: default
+      shell: /bin/bash
+      groups: "dialout"
+      state: present
+      remove: yes
+
+-
+  # install Arduino 1.8.19
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Download Arduino 1.8.19 tarball
+    shell: wget https://downloads.arduino.cc/arduino-1.8.19-linux64.tar.xz -O /home/kasm-default-profile/arduino-1.8.19-linux64.tar.xz
+  - name: unarchive Arduino tarball
+    unarchive:
+      src: /home/kasm-default-profile/arduino-1.8.19-linux64.tar.xz
+      dest: /opt
+      remote_src: yes
+  - name: install Arduino
+    shell:
+      cmd: /opt/arduino-1.8.19/install.sh
+      executable: /bin/bash
+  - name: Delete Arduino tarball
+    shell: rm /home/kasm-default-profile/arduino-1.8.19-linux64.tar.xz
+
+-
+  # install AVR-GCC toolchain for arduino
+  hosts: localhost
+  connection: local
+  gather_facts: yes
+  tags:
+    - install_avr_build_tools
+
+  tasks:
+  - name: Download AVR-GCC toolchain for arduino tarball
+    shell: wget http://downloads.arduino.cc/tools/avr-gcc-7.3.0-atmel3.6.1-arduino7-x86_64-pc-linux-gnu.tar.bz2 -O /home/kasm-default-profile/avr-gcc-7.3.0-atmel3.6.1-arduino7-x86_64-pc-linux-gnu.tar.bz2
+  - name: Unarchive AVR-GCC toolchain for arduino
+    unarchive:
+      src: /home/kasm-default-profile/avr-gcc-7.3.0-atmel3.6.1-arduino7-x86_64-pc-linux-gnu.tar.bz2
+      dest: /opt/arduino-1.8.19/hardware/tools
+      remote_src: yes
+  - name: Delete AVR-GCC toolchain for arduino tarball
+    shell: rm /home/kasm-default-profile/avr-gcc-7.3.0-atmel3.6.1-arduino7-x86_64-pc-linux-gnu.tar.bz2
+
+-
   # install firefox
   hosts: localhost
   connection: local
@@ -290,58 +620,6 @@
           }  
 
 -
-  # install PlantUML
-  hosts: localhost
-  connection: local
-  gather_facts: yes
-  tags:
-  - install_generator_plantuml
-  - install_doctools
-
-  vars:
-    jdk_version: 2:1.11-72
-    graphviz_version_expected: "dot - graphviz version 2.50.0 (20211204.2007)"
-
-  tasks:
-  - name: Install JDK
-    apt:
-      name: "default-jdk={{ jdk_version }}"
-      update_cache: yes
-  - name: Get JDK Version
-    shell: java --version | grep -m 1 -i openjdk
-    register: installed_jdk_version
-  - name: Install pre-reqs to build graphviz
-    apt:
-      name: libcairo2-dev, libexpat-dev, libfreetype-dev, libgd-dev, fontconfig-config, libglib2.0-dev, libgtk2.0-dev, libpng-dev, zlib1g-dev, libsdl-pango-dev, libgts-bin, libgtk-3-dev, libgtkglext1-dev, glade, freeglut3-dev, autoconf, automake, bison, flex, ghostscript, libtool, pkg-config, swig
-      update_cache: yes
-  - name: Expand source files archive
-    unarchive:
-      src: /home/kasm-default-profile/install_files/graphviz-2.50.0.tar.gz
-      dest: /home/kasm-default-profile/install_files/
-      remote_src: yes
-      creates: /home/kasm-default-profile/install_files/graphviz-2.50.0/README
-  - name: Build graphviz
-    shell:
-      cmd: ./configure --enable-perl=no && make > /tmp/graphviz_build_output.txt 2>&1 && make install
-      chdir: /home/kasm-default-profile/install_files/graphviz-2.50.0/
-      executable: /bin/bash
-  - name: Get graphviz version
-    shell: dot -V
-    register: installed_graphviz_version
-  - name: install plantuml
-    copy:
-      src: /home/kasm-default-profile/install_files/plantuml.jar
-      dest: /usr/local/bin/plantuml.jar
-      remote_src: yes
-  - name: Display JDK and GraphViz versions
-    debug:
-      msg: "JDK = {{ installed_jdk_version.stdout }} | graphviz = {{ installed_graphviz_version.stderr }}"
-  - name: Test Graphviz version
-    fail:
-      msg: "Graphviz Version Error: Expected {{ graphviz_version_expected }} | Found {{ installed_graphviz_version.stderr }}"
-    when: installed_graphviz_version.stderr != graphviz_version_expected
-
--
   # Copy VS Code changes to kasm-default-profile and lean up (remove) dev user now that vs code is installed
   hosts: localhost
   connection: local
@@ -354,27 +632,6 @@
       name: dev
       state: absent
       remove: yes 
-
--
-  hosts: localhost
-  connection: local
-
-  tasks:
-  - name: Download source setup
-    get_url:
-      url: https://deb.nodesource.com/setup_17.x
-      dest: /root/nodesource_setup.sh
-      mode: 0700
-
-  - name: Set Node source in apt
-    shell:
-      cmd: /root/nodesource_setup.sh
-      executable: /bin/bash
-
-  - name: Apt install NodeJS
-    apt:
-      name: nodejs
-      update_cache: yes
 
 # Three dots indicate the end of a YAML document
 ...
