--- a/playbook.yaml
+++ b/playbook.yaml
@@ -212,7 +212,7 @@
   - install_doctools
 
   vars:
-    jdk_version: 2:1.11-72
+    jdk_version: 2:1.11-72build2
     graphviz_version_expected: "dot - graphviz version 2.50.0 (20211204.2007)"
 
   tasks:
