--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,7 +1,10 @@
 ---
 # Add Ansible Galaxy Packages here, role_example_hello included to prevent errors in template testing
-- irixjp.role_example_hello             # https://galaxy.ansible.com/irixjp/role_example_hello
-- do1jlr.install_firefox                # https://galaxy.ansible.com/do1jlr/install_firefox
+- irixjp.role_example_hello           # https://galaxy.ansible.com/irixjp/role_example_hello
+- grzegorznowak.nvm_node              # https://galaxy.ansible.com/grzegorznowak/nvm_node
+- andrewrothstein.pandoc              # https://galaxy.ansible.com/andrewrothstein/pandoc
+- do1jlr.install_firefox              # https://galaxy.ansible.com/do1jlr/install_firefox
 - don_rumata.ansible_role_install_wine  # https://galaxy.ansible.com/don_rumata/ansible_role_install_wine
-- gantsign.visual-studio-code           # https://galaxy.ansible.com/gantsign/visual-studio-code
+#- geerlingguy.pip                     # https://galaxy.ansible.com/geerlingguy/pip
+- gantsign.visual-studio-code         # https://galaxy.ansible.com/gantsign/visual-studio-code
 ...
