update node tools
- update node_version to 18.5.0
- update npm_version to 8.12.1
- update npx_version to 8.12.1
- update yarn_version to 3.5.0
- update generator_code_version to 1.7.5
- update yo_version to 4.3.1

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -321,24 +321,26 @@
       name: "openscad={{ openscad_version_to_install }}"
 
 -
-  # install NodeJs
+  # Install NodeJS Tools
   hosts: localhost
   connection: local
   gather_facts: yes
   tags:
+  - install_node
   - install_doctools
 
   vars:
-    node_version: "16.14.0"
+    node_version: "18.5.0"
     v_node_version: "v{{ node_version }}"
-    npm_version: "8.3.1"
-    npx_version: "8.3.1"
-    yarn_version: "1.22.11"
-    yo_version: "4.3.0"
-    generator_code_version: "1.6.7"
-
+    npm_version: "8.12.1"
+    npx_version: "8.12.1"
+    yarn_version: "3.5.0"
+    yo_version: "4.3.1"
+    generator_code_version: "1.7.5"
 
   tasks:   # Test Node JS Tools versions
+  - name: Install Yarn
+    shell: "corepack enable && corepack prepare yarn@{{ yarn_version }} --activate"
   - name: Get node version
     shell: node --version
     register: installed_node_version
@@ -373,11 +375,9 @@
 
   roles:
   - role: grzegorznowak.nvm_node
-    nvm_install_script_version: "0.39.1"
+    nvm_install_script_version: "0.39.3"
     nvm_node_version: "{{ node_version }}"
     nvm_install_globally:
-    - name: yarn
-      version: "{{ yarn_version }}"
     - name: yo
       version: "{{ yo_version }}"
     - name: generator-code
