--- a/playbook.yaml
+++ b/playbook.yaml
@@ -274,6 +274,18 @@
     shell: mkdir -p /home/kasm-default-profile/.local/share/applications/
   - name: Configure PrusaSlicer desktop shortcut
     shell: echo "[Desktop Entry]\nName=PrusaSlicer\nGenericName=PrusaSlicer\nExec=/opt/PrusaSlicer-2.5.2+linux-x64-GTK3-202303231201/bin/prusa-slicer\nIcon=/opt/PrusaSlicer-{{ prusaslicer_version }}+linux-x64-GTK3-202303231201/resources/icons/PrusaSlicer.png\nTerminal=false\nType=Application\nStartupNotify=false\nCategories=Application;Development;" > /home/kasm-default-profile/.local/share/applications/prusaslicer.desktop
+-
+  # Install GIMP
+  hosts: localhost
+  connection: local
+  tags:
+  - install_gimp
+
+  tasks:
+  - name: Install GIMP
+    apt:
+      name: gimp
+      update_cache: yes
 
 -
   # install OpenSCAD
