move desktop shortcut for prusaslicer to /usr/share/applications

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -276,9 +276,9 @@
   - name: Create symlink for prusa-slicer in /usr/local/bin
     shell: ln -srv /opt/{{ prusaslicer_dir }}/bin/prusa-slicer /usr/local/bin/prusa-slicer
   - name: Create local application folder for PrusaSlicer
-    shell: mkdir -p /home/kasm-default-profile/.local/share/applications/
+    shell: mkdir -p /usr/share/applications/
   - name: Configure PrusaSlicer desktop shortcut
-    shell: echo "[Desktop Entry]\nName=PrusaSlicer\nGenericName=PrusaSlicer\nExec=/usr/local/bin/prusa-slicer\nIcon=/opt/{{ prusaslicer_dir }}/resources/icons/PrusaSlicer.png\nTerminal=false\nType=Application\nStartupNotify=false\nCategories=Application;Development;" > /home/kasm-default-profile/.local/share/applications/prusaslicer.desktop
+    shell: echo "[Desktop Entry]\nName=PrusaSlicer\nGenericName=PrusaSlicer\nExec=/usr/local/bin/prusa-slicer\nIcon=/opt/{{ prusaslicer_dir }}/resources/icons/PrusaSlicer.png\nTerminal=false\nType=Application\nStartupNotify=false\nCategories=Application;Development;" > /usr/share/applications/prusaslicer.desktop
   - name: Get prusa-slicer version
     shell: prusa-slicer --help | grep PrusaSlicer- | awk '{ print $1 '}
     register: installed_prusaslicer_version
